# kraky

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRESENTATION.md  PRESENTATION_CHEATSHEET.md  PRESENTATION_PLAN.md  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  RELEASE_GUIDE.md  SETUP.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  VIDEO_RECORDING_GUIDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: auth_example.rs  benchmark.rs  demo.rs  export_multi_csv.rs  export_to_csv.rs  liquidity_monitor.rs  multi_pair_monitor.rs  multi_subscribe.rs  ohlc.rs  orderbook.rs  simple_price_alerts.rs  telegram_imbalance_bot.rs  telegram_private_alerts.rs  telegram_trading_bot.rs  telegram_trading_demo.rs  ticker.rs  trades.rs  whale_watcher.rs
src/: auth.rs  client.rs  error.rs  lib.rs  messages.rs  subscriptions.rs  telegram.rs
src/models/: mod.rs  ohlc.rs  orderbook.rs  private.rs  ticker.rs  trade.rs  trading.rs
